--- a/W01D3/W01D3_APIs.ipynb
+++ b/W01D3/W01D3_APIs.ipynb
@@ -16,6 +16,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Download the notebook](https://downgit.github.io/#/home?url=https://github.com/sedv8808/LighthouseLabs/tree/main/W01D3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -368,6 +375,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Hint: If you are on Chrome, use the JSON formatter extension."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -380,69 +398,69 @@
      "data": {
       "text/plain": [
        "[{'RouteNo': '099',\n",
-       "  'RouteName': 'COMMERCIAL-BROADWAY/UBC (B-LINE)',\n",
+       "  'RouteName': 'Commercial-Broadway/UBC (B-Line)',\n",
        "  'Direction': 'EAST',\n",
        "  'RouteMap': {'Href': 'https://nb.translink.ca/geodata/099.kmz'},\n",
        "  'Schedules': [{'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '11:16am',\n",
+       "    'ExpectedLeaveTime': '9:15am',\n",
        "    'ExpectedCountdown': -2,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '12:08:02 pm'},\n",
-       "   {'Pattern': 'E1',\n",
-       "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '11:21am',\n",
-       "    'ExpectedCountdown': 3,\n",
+       "    'LastUpdate': '10:08:03 am'},\n",
+       "   {'Pattern': 'E8FL2',\n",
+       "    'Destination': 'TO BOUNDARY B-LINE',\n",
+       "    'ExpectedLeaveTime': '9:18am',\n",
+       "    'ExpectedCountdown': 1,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '12:08:02 pm'},\n",
+       "    'LastUpdate': '10:08:03 am'},\n",
+       "   {'Pattern': 'E8FL2',\n",
+       "    'Destination': 'TO BOUNDARY B-LINE',\n",
+       "    'ExpectedLeaveTime': '9:21am',\n",
+       "    'ExpectedCountdown': 4,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '10:08:03 am'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '11:25am',\n",
+       "    'ExpectedLeaveTime': '9:24am',\n",
        "    'ExpectedCountdown': 7,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '12:08:02 pm'},\n",
-       "   {'Pattern': 'E1',\n",
-       "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '11:30am',\n",
-       "    'ExpectedCountdown': 12,\n",
+       "    'LastUpdate': '10:08:03 am'},\n",
+       "   {'Pattern': 'E8FL2',\n",
+       "    'Destination': 'TO BOUNDARY B-LINE',\n",
+       "    'ExpectedLeaveTime': '9:27am',\n",
+       "    'ExpectedCountdown': 10,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '12:08:02 pm'},\n",
+       "    'LastUpdate': '10:08:03 am'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '11:34am',\n",
-       "    'ExpectedCountdown': 16,\n",
+       "    'ExpectedLeaveTime': '9:30am',\n",
+       "    'ExpectedCountdown': 13,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '12:08:02 pm'},\n",
-       "   {'Pattern': 'E1',\n",
-       "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '11:38am',\n",
-       "    'ExpectedCountdown': 20,\n",
-       "    'ScheduleStatus': '*',\n",
-       "    'CancelledTrip': False,\n",
-       "    'CancelledStop': False,\n",
-       "    'AddedTrip': False,\n",
-       "    'AddedStop': False,\n",
-       "    'LastUpdate': '12:08:02 pm'}]}]"
+       "    'LastUpdate': '10:08:03 am'}]}]"
       ]
      },
      "execution_count": 1,
@@ -465,8 +483,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -479,9 +498,9 @@
         "AtStreet": "98 AVE",
         "BayNo": "N",
         "City": "SURREY",
-        "Distance": 307,
+        "Distance": 308,
         "Latitude": 49.1796,
-        "Longitude": -122.845818,
+        "Longitude": -122.84581,
         "Name": "SB KING GEORGE BLVD FS 98 AVE",
         "OnStreet": "KING GEORGE BLVD",
         "Routes": "314, 321, 329",
@@ -492,9 +511,9 @@
         "AtStreet": "134 ST",
         "BayNo": "N",
         "City": "SURREY",
-        "Distance": 339,
+        "Distance": 338,
         "Latitude": 49.176991,
-        "Longitude": -122.850708,
+        "Longitude": -122.8507,
         "Name": "EB 96 AVE FS 134 ST",
         "OnStreet": "96 AVE",
         "Routes": "314, 329",
@@ -505,8 +524,8 @@
         "AtStreet": "134 ST",
         "BayNo": "N",
         "City": "SURREY",
-        "Distance": 342,
-        "Latitude": 49.177158,
+        "Distance": 343,
+        "Latitude": 49.177151,
         "Longitude": -122.851791,
         "Name": "WB 96 AVE FS 134 ST",
         "OnStreet": "96 AVE",
@@ -532,7 +551,7 @@
         "BayNo": "N",
         "City": "SURREY",
         "Distance": 386,
-        "Latitude": 49.177135,
+        "Latitude": 49.177132,
         "Longitude": -122.847,
         "Name": "WB 96 AVE FS KING GEORGE BLVD",
         "OnStreet": "96 AVE",
@@ -558,8 +577,8 @@
         "BayNo": "4",
         "City": "SURREY",
         "Distance": 460,
-        "Latitude": 49.182682,
-        "Longitude": -122.845184,
+        "Latitude": 49.182678,
+        "Longitude": -122.845177,
         "Name": "KING GEORGE STN BAY 4",
         "OnStreet": "KING GEORGE STN",
         "Routes": "314, 321, 326, 329, 395, 502, 503, R1",
@@ -584,11 +603,11 @@
         "BayNo": "N",
         "City": "SURREY",
         "Distance": 490,
-        "Latitude": 49.182755,
+        "Latitude": 49.182751,
         "Longitude": -122.844742,
         "Name": "KING GEORGE STATION PLATFORM 2",
         "OnStreet": "KING GEORGE STATION",
-        "Routes": "992",
+        "Routes": "",
         "StopNo": 57983,
         "WheelchairAccess": 0
        },
@@ -597,7 +616,7 @@
         "BayNo": "N",
         "City": "SURREY",
         "Distance": 491,
-        "Latitude": 49.181076,
+        "Latitude": 49.181068,
         "Longitude": -122.856552,
         "Name": "NB 132 ST NS 98 AVE",
         "OnStreet": "132 ST",
@@ -606,30 +625,30 @@
         "WheelchairAccess": 1
        },
        {
-        "AtStreet": "BAY 2",
-        "BayNo": "2",
-        "City": "SURREY",
-        "Distance": 496,
-        "Latitude": 49.183125,
-        "Longitude": -122.845139,
-        "Name": "KING GEORGE STN BAY 2",
-        "OnStreet": "KING GEORGE STN",
-        "Routes": "345, 394",
-        "StopNo": 54990,
-        "WheelchairAccess": 1
-       },
-       {
         "AtStreet": "98 AVE",
         "BayNo": "N",
         "City": "SURREY",
-        "Distance": 497,
+        "Distance": 496,
         "Latitude": 49.180401,
-        "Longitude": -122.856804,
+        "Longitude": -122.856796,
         "Name": "SB 132 ST FS 98 AVE",
         "OnStreet": "132 ST",
         "Routes": "324",
         "StopNo": 55669,
         "WheelchairAccess": 0
+       },
+       {
+        "AtStreet": "BAY 2",
+        "BayNo": "2",
+        "City": "SURREY",
+        "Distance": 496,
+        "Latitude": 49.183121,
+        "Longitude": -122.845131,
+        "Name": "KING GEORGE STN BAY 2",
+        "OnStreet": "KING GEORGE STN",
+        "Routes": "345, 394",
+        "StopNo": 54990,
+        "WheelchairAccess": 1
        },
        {
         "AtStreet": "PLATFORM 1",
@@ -640,7 +659,7 @@
         "Longitude": -122.844688,
         "Name": "KING GEORGE STATION PLATFORM 1",
         "OnStreet": "KING GEORGE STATION",
-        "Routes": "992",
+        "Routes": "",
         "StopNo": 57984,
         "WheelchairAccess": 0
        }
@@ -649,7 +668,7 @@
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -668,7 +687,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_list = []\n",
+    "for i in range(0, len(response)):\n",
+    "    new_list.append(response[i]['Name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SB KING GEORGE BLVD FS 98 AVE',\n",
+       " 'EB 96 AVE FS 134 ST',\n",
+       " 'WB 96 AVE FS 134 ST',\n",
+       " 'NB KING GEORGE BLVD FS FRASER HWY',\n",
+       " 'WB 96 AVE FS KING GEORGE BLVD',\n",
+       " 'NB KING GEORGE BLVD FS 96 AVE',\n",
+       " 'KING GEORGE STN BAY 4',\n",
+       " 'KING GEORGE STN BAY 1     ',\n",
+       " 'KING GEORGE STATION PLATFORM 2',\n",
+       " 'NB 132 ST NS 98 AVE',\n",
+       " 'SB 132 ST FS 98 AVE',\n",
+       " 'KING GEORGE STN BAY 2',\n",
+       " 'KING GEORGE STATION PLATFORM 1']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -681,7 +743,7 @@
        "'SB KING GEORGE BLVD FS 98 AVE'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,13 +754,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "outputs": [],
+   "source": [
+    "data = requests.get('https://api.github.com/users/sedv8808',headers={'accept': 'application/JSON'}).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -729,21 +800,21 @@
        " 'hireable': None,\n",
        " 'bio': 'Recent graduate from UBC Master of Data Science. \\r\\nI would like to use my newly acquired skills to make the world a greener place.',\n",
        " 'twitter_username': None,\n",
-       " 'public_repos': 21,\n",
+       " 'public_repos': 22,\n",
        " 'public_gists': 0,\n",
-       " 'followers': 5,\n",
+       " 'followers': 6,\n",
        " 'following': 1,\n",
        " 'created_at': '2018-08-22T01:19:27Z',\n",
-       " 'updated_at': '2021-02-28T06:00:33Z'}"
+       " 'updated_at': '2021-04-26T15:05:23Z'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "requests.get('https://api.github.com/users/sedv8808',headers={'accept': 'application/JSON'}).json()"
+    "data"
    ]
   },
   {
@@ -780,47 +851,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\r\n",
-      "  \"login\": \"sedv8808\",\r\n",
-      "  \"id\": 42593920,\r\n",
-      "  \"node_id\": \"MDQ6VXNlcjQyNTkzOTIw\",\r\n",
-      "  \"avatar_url\": \"https://avatars.githubusercontent.com/u/42593920?v=4\",\r\n",
-      "  \"gravatar_id\": \"\",\r\n",
-      "  \"url\": \"https://api.github.com/users/sedv8808\",\r\n",
-      "  \"html_url\": \"https://github.com/sedv8808\",\r\n",
-      "  \"followers_url\": \"https://api.github.com/users/sedv8808/followers\",\r\n",
-      "  \"following_url\": \"https://api.github.com/users/sedv8808/following{/other_user}\",\r\n",
-      "  \"gists_url\": \"https://api.github.com/users/sedv8808/gists{/gist_id}\",\r\n",
-      "  \"starred_url\": \"https://api.github.com/users/sedv8808/starred{/owner}{/repo}\",\r\n",
-      "  \"subscriptions_url\": \"https://api.github.com/users/sedv8808/subscriptions\",\r\n",
-      "  \"organizations_url\": \"https://api.github.com/users/sedv8808/orgs\",\r\n",
-      "  \"repos_url\": \"https://api.github.com/users/sedv8808/repos\",\r\n",
-      "  \"events_url\": \"https://api.github.com/users/sedv8808/events{/privacy}\",\r\n",
-      "  \"received_events_url\": \"https://api.github.com/users/sedv8808/received_events\",\r\n",
-      "  \"type\": \"User\",\r\n",
-      "  \"site_admin\": false,\r\n",
-      "  \"name\": \"Socorro Dominguez Vidana\",\r\n",
-      "  \"company\": null,\r\n",
-      "  \"blog\": \"\",\r\n",
-      "  \"location\": \"Vancouver, BC\",\r\n",
-      "  \"email\": null,\r\n",
-      "  \"hireable\": null,\r\n",
-      "  \"bio\": \"Recent graduate from UBC Master of Data Science. \\r\\nI would like to use my newly acquired skills to make the world a greener place.\",\r\n",
-      "  \"twitter_username\": null,\r\n",
-      "  \"public_repos\": 21,\r\n",
-      "  \"public_gists\": 0,\r\n",
-      "  \"followers\": 5,\r\n",
-      "  \"following\": 1,\r\n",
-      "  \"created_at\": \"2018-08-22T01:19:27Z\",\r\n",
-      "  \"updated_at\": \"2021-03-02T16:47:39Z\"\r\n",
-      "}\r\n"
+      "{\"login\":\"sedv8808\",\"id\":42593920,\"node_id\":\"MDQ6VXNlcjQyNTkzOTIw\",\"avatar_url\":\"https://avatars.githubusercontent.com/u/42593920?v=4\",\"gravatar_id\":\"\",\"url\":\"https://api.github.com/users/sedv8808\",\"html_url\":\"https://github.com/sedv8808\",\"followers_url\":\"https://api.github.com/users/sedv8808/followers\",\"following_url\":\"https://api.github.com/users/sedv8808/following{/other_user}\",\"gists_url\":\"https://api.github.com/users/sedv8808/gists{/gist_id}\",\"starred_url\":\"https://api.github.com/users/sedv8808/starred{/owner}{/repo}\",\"subscriptions_url\":\"https://api.github.com/users/sedv8808/subscriptions\",\"organizations_url\":\"https://api.github.com/users/sedv8808/orgs\",\"repos_url\":\"https://api.github.com/users/sedv8808/repos\",\"events_url\":\"https://api.github.com/users/sedv8808/events{/privacy}\",\"received_events_url\":\"https://api.github.com/users/sedv8808/received_events\",\"type\":\"User\",\"site_admin\":false,\"name\":\"Socorro Dominguez Vidana\",\"company\":null,\"blog\":\"\",\"location\":\"Vancouver, BC\",\"email\":null,\"hireable\":null,\"bio\":\"Recent graduate from UBC Master of Data Science. \\r\\nI would like to use my newly acquired skills to make the world a greener place.\",\"twitter_username\":null,\"public_repos\":22,\"public_gists\":0,\"followers\":6,\"following\":1,\"created_at\":\"2018-08-22T01:19:27Z\",\"updated_at\":\"2021-04-26T15:05:23Z\"}"
      ]
     }
    ],
@@ -896,6 +934,26 @@
    ],
    "source": [
     "requests.get('https://api.github.com/users/sedv8809')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [500]>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.get('https://api.translink.ca/rttiapi/v1/stops?lat=49.18&long=-122.85')"
    ]
   },
   {
