--- a/W05D1/W05D1_training_and_evaluation.ipynb
+++ b/W05D1/W05D1_training_and_evaluation.ipynb
@@ -1116,11 +1116,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "### Accuracy\n",
-    "$$acc = \\frac{\\text{# of times correct}}{\\text{# of predictions made}}$$\n",
-    "\n",
+    "$$acc = \\frac{\\text{# of times correct}}{\\text{# of predictions made}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Confusion matrix\n",
     "Full detail about how model fails\n",
     "\n",
@@ -1129,8 +1142,17 @@
     "|Predicted + | True Positive | False Positive | \n",
     "|Predicted - | False Negative | True Negative |\n",
     "\n",
-    "<img src=\"images/multiclass_confusion_matrix.png\" style=\"width: 300px; display: block; margin-left: auto; margin-right: auto\"/>\n",
-    "\n",
+    "<img src=\"images/multiclass_confusion_matrix.png\" style=\"width: 300px; display: block; margin-left: auto; margin-right: auto\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "#### In a binary case of 100 examples (50+, 50-), 95% accuracy:\n",
     "\n",
     "| | Actual + | Actual - |\n",
@@ -1147,8 +1169,17 @@
     "    - **cancer diagnosis**? (positive means \"has cancer\")\n",
     "    - **spam filtering**? (positive means \"is spam\")\n",
     "    \n",
-    "**Conclusion**: How your model fails matters\n",
-    "\n",
+    "**Conclusion**: How your model fails matters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Metrics computed from binary confusion matrix\n",
     "\n",
     "#### Recall: True positives / Condition positive\n",
