--- a/W01D2/W01D2_PPDS.ipynb
+++ b/W01D2/W01D2_PPDS.ipynb
@@ -11,7 +11,7 @@
     "## Lighthouse Labs\n",
     "### W01D2 Programming in Python for DS\n",
     "Instructor: Socorro Dominguez  \n",
-    "May 25, 2021"
+    "June 22, 2021"
    ]
   },
   {
@@ -60,7 +60,7 @@
     }
    },
    "source": [
-    "Download this notebook: https://downgit.github.io/#/home?url=https://github.com/sedv8808/LighthouseLabs/blob/main/W01D2/W01D2_PPDS.ipynb"
+    "[Download this notebook](https://downgit.github.io/#/home?url=https://github.com/sedv8808/LighthouseLabs/blob/main/W01D2/W01D2_PPDS.ipynb)"
    ]
   },
   {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -355,7 +355,7 @@
        "int"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -417,7 +417,7 @@
        "30"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -438,16 +438,16 @@
     {
      "data": {
       "text/plain": [
-       "\"mulan's dragon's name is mushu\""
+       "\"MULAN'S DRAGON'S NAME IS MUSHU\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "string.lower()"
+    "string.upper()"
    ]
   },
   {
@@ -663,90 +663,10 @@
     }
    },
    "source": [
-    "### Tuples\n",
-    "Tuples are a data structure very similar to lists but with two main differences:\n",
-    "\n",
-    "They are represented with parentheses instead of square brackets, and\n",
-    "They are immutable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('I', None, 'do', 1, False)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_tuple = ('I', None,  'do', 1, False)\n",
-    "my_tuple"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Sets\n",
-    "\n",
-    "Data structure that:\n",
-    "- are unordered, meaning there is no element 0 and element 1, and\n",
-    "- The values contained are unique - meaning there are no duplicate entries.\n",
-    "- Sets are made with curly brackets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1.0, 2, 'apple'}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_set = {2, 1.0, 'apple', 1.0, 'apple'}\n",
-    "my_set"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "### Lists\n",
     "\n",
-    "Similarly to how a string is a sequence of characters in order, a list is a sequence of elements with a particular order.\n",
+    "Similarly to how a string is a sequence of characters in order, a   \n",
+    "list is a sequence of elements with a particular order.\n",
     "\n",
     "Lists can be identified by their square brackets.\n",
     "\n",
@@ -892,13 +812,94 @@
     }
    },
    "source": [
+    "### Tuples\n",
+    "Tuples are a data structure very similar to lists but with two main differences:\n",
+    "\n",
+    "They are represented with parentheses instead of square brackets, and\n",
+    "They are immutable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I', None, 'do', 1, False)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_tuple = ('I', None,  'do', 1, False)\n",
+    "my_tuple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Sets\n",
+    "\n",
+    "Data structure that:\n",
+    "- are unordered, meaning there is no element 0 and element 1, and\n",
+    "- The values contained are unique - meaning there are no duplicate entries.\n",
+    "- Sets are made with curly brackets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1.0, 2, 'apple'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_set = {2, 1.0, 'apple', 1.0, 'apple'}\n",
+    "my_set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "#### Dictionaries\n",
     "Dictionaries are unordered pairs of keys and corresponding values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -914,7 +915,7 @@
        " 'Age': 32}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -939,7 +940,7 @@
        "'Checking'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -963,7 +964,7 @@
        "dict_keys(['Name', 'Account_Type', 'Branch', 'Age'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -984,16 +985,16 @@
     {
      "data": {
       "text/plain": [
-       "dict_values(['Jack Sparrow', 'Checking', 'North York', 32])"
+       "dict_items([('Name', 'Jack Sparrow'), ('Account_Type', 'Checking'), ('Branch', 'North York'), ('Age', 32)])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "account_details.values()"
+    "account_details.items()"
    ]
   },
   {
@@ -1211,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1277,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1323,235 +1324,6 @@
    ],
    "source": [
     "count_letter_in_word_new(7)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Deep and Shallow Copy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Modifying the copied list at a “superficial” level will not be a problem in shallow copy.\n",
-    "\n",
-    "* However, because we only created a shallow copy of the original list, shallow copy list still contains references to original list's child objects. This is a problem when try list manipulation such as below"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# importing copy module \n",
-    "import copy \n",
-    "\n",
-    "# initializing list 1 \n",
-    "list1 = [6,7,[3,4],2,8] \n",
-    "\n",
-    "\n",
-    "# using copy for shallow copy \n",
-    "list2 = copy.copy(list1) \n",
-    "\n",
-    "# using deepcopy for deepcopy \n",
-    "list3 = copy.deepcopy(list1) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 7, [3, 4], 2, 8]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 7, [3, 4], 2, 8]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 7, [3, 4], 2, 8]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 7, [3, 4], 2, 8]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "list1[2][0] = 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 7, [6, 4], 2, 8]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 7, [6, 4], 2, 8]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6, 7, [3, 4], 2, 8]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list3"
    ]
   },
   {
@@ -1668,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1679,7 +1451,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today's date:  2021-04-27 11:47:17.271564\n"
+      "Today's date:  2021-05-25 12:01:46.292124\n"
      ]
     }
    ],
@@ -1693,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1704,8 +1476,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Date after 15 days:  2021-05-12 11:47:17.271564\n",
-      "Date two weeks ago:  2021-04-13 11:47:17.271564\n",
+      "Date after 15 days:  2021-06-09 12:01:46.292124\n",
+      "Date two weeks ago:  2021-05-11 12:01:46.292124\n",
       "two_weeks_ago object type:  <class 'datetime.datetime'>\n"
      ]
     }
@@ -1734,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2192,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2233,6 +2005,295 @@
    ],
    "source": [
     "shopping_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pasta 3\n",
+      "garlic 4\n",
+      "sauce 2\n",
+      "basil 2\n",
+      "salt 3\n",
+      "olive oil 3\n",
+      "rice 3\n",
+      "bread 3\n",
+      "peanut butter 1\n",
+      "flour 1\n",
+      "eggs 1\n",
+      "onions 1\n",
+      "mushrooms 3\n",
+      "broccoli 2\n",
+      "butter 2\n",
+      "pickles 6\n",
+      "milk 2\n",
+      "chia seeds 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in pantry.items():\n",
+    "    print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first loop pasta\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop garlic\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop sauce\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop basil\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop salt\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop olive oil\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop rice\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop bread\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop peanut butter\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop flour\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop eggs\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop onions\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop mushrooms\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop broccoli\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop butter\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop pickles\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop milk\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n",
+      "first loop chia seeds\n",
+      "2 pasta\n",
+      "2 garlic\n",
+      "2 sauce\n",
+      "2 basil\n",
+      "2 salt\n",
+      "2 pepper\n",
+      "2 olive oil\n",
+      "2 onions\n",
+      "2 mushrooms\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ingredient in pantry:\n",
+    "    print(\"first loop\", ingredient)\n",
+    "    for ingredient2 in meal_recipe:\n",
+    "        print(\"2\", ingredient2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "6\n",
+      "2\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in pantry:\n",
+    "    print(pantry[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pantry['pasta'] - meal_recipe['pasta']"
    ]
   },
   {
